Login activity, added ButterKnife, Picaso, Volley
Se agregaron las librerias de Volley, ButterKnife y picalo y se
implemento la funcionalidad del activity de login

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
         <item name="android:navigationBarColor">@color/azulUni</item>
     </style>
 
+    <style name="SplashTheme" parent="App">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
 </resources>
