--- a/app/src/main/res/layout/fragment_news_reader.xml
+++ b/app/src/main/res/layout/fragment_news_reader.xml
@@ -28,7 +28,7 @@
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/logo_u"
+            android:src="@drawable/logo_u"
             app:civ_border_color="@color/amarilloUni"
             app:civ_border_width="2dp" />
 
