--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/logo_u" />
+        app:srcCompat="@drawable/user_icon" />
 
     <TextView
         android:id="@+id/tvApplicationLabel"
