--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -4,26 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingStart="20dp">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/user_icon" />
+    android:layout_weight="3"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvApplicationLabel"
-        android:layout_width="wrap_content"
+        android:id="@+id/noticia_item_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
         android:fontFamily="sans-serif-medium"
-        android:padding="20dp"
-        android:textAlignment="viewStart"
+        android:padding="2dp"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        tools:text="Notícia" />
+
+    <TextView
+        android:id="@+id/noticia_item_shortbody"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fontFamily="sans-serif-medium"
+        android:padding="2dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
         tools:text="Notícia" />
 
 </LinearLayout>
